集成 MyBatis-Plus（无业务）+ 多租户基础架构

--- a/app-infra/pom.xml
+++ b/app-infra/pom.xml
@@ -18,7 +18,11 @@
     <description>Infrastructure module - Database, Redis, Cache</description>
 
     <dependencies>
-        <!-- Reserved for future dependencies -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis-plus.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
