--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>3.2.5</spring.boot.version>
+        <mybatis-plus.version>3.5.9</mybatis-plus.version>
     </properties>
 
     <modules>
