--- a/app-application/pom.xml
+++ b/app-application/pom.xml
@@ -20,6 +20,12 @@
     <dependencies>
         <dependency>
             <groupId>com.bluecone</groupId>
+            <artifactId>app-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.bluecone</groupId>
             <artifactId>app-infra</artifactId>
             <version>${project.version}</version>
         </dependency>
