--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mybatis-plus.version>3.5.7</mybatis-plus.version>
         <mysql.version>8.0.33</mysql.version>
+        <lombok.version>1.18.30</lombok.version>
     </properties>
 
     <modules>
