系统日志架构开发

--- a/app-core/pom.xml
+++ b/app-core/pom.xml
@@ -28,6 +28,16 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
         <!-- Logstash Logback Encoder for JSON logging -->
         <dependency>
             <groupId>net.logstash.logback</groupId>
