--- a/app-order/pom.xml
+++ b/app-order/pom.xml
@@ -18,7 +18,22 @@
     <description>Order module - Order management</description>
 
     <dependencies>
-        <!-- Reserved for future dependencies -->
+        <dependency>
+            <groupId>com.bluecone</groupId>
+            <artifactId>app-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
