- JWT + RefreshToken 认证体系 - 会话多端登录管理（多设备会话表） - 基于 Redis 的 Token 黑名单 / 会话缓存 - 与现有异常体系、日志体系、Redis 基础设施、缓存体系保持风格统一

--- a/app-security/pom.xml
+++ b/app-security/pom.xml
@@ -18,7 +18,34 @@
     <description>Security module - Authentication, JWT, Security mechanisms</description>
 
     <dependencies>
-        <!-- Reserved for future dependencies -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.bluecone</groupId>
+            <artifactId>app-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.bluecone</groupId>
+            <artifactId>app-infra</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.bluecone</groupId>
+            <artifactId>app-user</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
