全局唯一 ID（Snowflake/ULID）

--- a/app-infra/pom.xml
+++ b/app-infra/pom.xml
@@ -62,6 +62,12 @@
 
         <dependency>
             <groupId>com.bluecone</groupId>
+            <artifactId>app-id</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.bluecone</groupId>
             <artifactId>app-core</artifactId>
             <version>${project.version}</version>
         </dependency>
