--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>app-tenant</module>
         <module>app-store</module>
         <module>app-product</module>
+        <module>app-inventory</module>
         <module>app-application</module>
     </modules>
 
