--- a/app-inventory/pom.xml
+++ b/app-inventory/pom.xml
@@ -10,11 +10,11 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>app-order</artifactId>
+    <artifactId>app-inventory</artifactId>
     <packaging>jar</packaging>
 
-    <name>app-order</name>
-    <description>Order module - Order management</description>
+    <name>app-inventory</name>
+    <description>Inventory module - Inventory management</description>
 
     <dependencies>
         <dependency>
@@ -43,6 +43,10 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
