--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,10 @@
         <module>app-infra</module>
         <module>app-security</module>
         <module>app-order</module>
+
+        <!-- 新增支付模块 -->
+        <module>app-payment</module>
+
         <module>app-tenant</module>
         <module>app-store</module>
         <module>app-product</module>
