--- a/app-payment/pom.xml
+++ b/app-payment/pom.xml
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
 
     <name>app-payment</name>
-    <description>Payment module - Unified payment center</description>
+    <description>Payment module - Payment processing</description>
 
     <dependencies>
         <dependency>
