--- a/app-order/pom.xml
+++ b/app-order/pom.xml
@@ -29,6 +29,11 @@
         </dependency>
         <dependency>
             <groupId>com.bluecone</groupId>
+            <artifactId>app-payment</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bluecone</groupId>
             <artifactId>app-security</artifactId>
             <version>${project.version}</version>
         </dependency>
