--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <java.version>21</java.version>
         <spring.boot.version>3.2.5</spring.boot.version>
         <mybatis-plus.version>3.5.7</mybatis-plus.version>
+        <!-- 与 mybatis-plus 3.5.7 兼容的 MyBatis 核心版本（需要提供 Configuration.parsePendingMethods(boolean)） -->
+        <mybatis.version>3.5.16</mybatis.version>
         <mysql.version>8.0.33</mysql.version>
         <!-- fix: Java 21 requires Lombok 1.18.36 or later for annotation processing -->
         <lombok.version>1.18.36</lombok.version>
@@ -28,6 +30,7 @@
         <assertj.version>3.25.3</assertj.version>
         <mockito.version>5.11.0</mockito.version>
         <testcontainers.version>1.19.4</testcontainers.version>
+        <archunit.version>1.2.1</archunit.version>
         <skip.it.tests>true</skip.it.tests>
         <testcontainers.enabled>false</testcontainers.enabled>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -68,6 +71,11 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>${mybatis.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.mysql</groupId>
