--- a/app-application/pom.xml
+++ b/app-application/pom.xml
@@ -19,6 +19,11 @@
     <dependencies>
         <dependency>
             <groupId>com.bluecone</groupId>
+            <artifactId>app-ops</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bluecone</groupId>
             <artifactId>app-core</artifactId>
             <version>${project.version}</version>
         </dependency>
