把 public_id 从“靠约定”升级为“平台强制”，包括：全局注解解析（@ResolvePublicId）、统一错误码、批量 resolve、防越权（tenant + store 范围校验）、以及 ArchUnit 规则禁止 Controller 直接用 long id。

--- a/app-infra/pom.xml
+++ b/app-infra/pom.xml
@@ -102,6 +102,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.bluecone</groupId>
+            <artifactId>app-platform-codegen</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
@@ -122,5 +127,55 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>generate-publicid-lookups</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>com.bluecone.app.platform.codegen.publicid.PublicIdLookupCodegenMain</mainClass>
+                            <arguments>
+                                <argument>${project.basedir}/src/main/resources/public-id-resources.yaml</argument>
+                                <argument>${project.build.directory}/generated-sources/publicid</argument>
+                                <argument>200</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>3.6.0</version>
+                <executions>
+                    <execution>
+                        <id>add-publicid-generated-sources</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-sources/publicid</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
