app-id 高隔离重构（对外只接口）+ longId 走 Segment 默认

--- a/app-core/pom.xml
+++ b/app-core/pom.xml
@@ -19,7 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>com.bluecone</groupId>
-            <artifactId>app-id</artifactId>
+            <artifactId>app-id-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
