--- a/app-infra/pom.xml
+++ b/app-infra/pom.xml
@@ -93,6 +93,11 @@
         </dependency>
         <dependency>
             <groupId>com.bluecone</groupId>
+            <artifactId>app-id-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bluecone</groupId>
             <artifactId>app-id</artifactId>
             <version>${project.version}</version>
         </dependency>
