--- a/app-application/pom.xml
+++ b/app-application/pom.xml
@@ -34,6 +34,11 @@
         </dependency>
         <dependency>
             <groupId>com.bluecone</groupId>
+            <artifactId>app-id</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bluecone</groupId>
             <artifactId>app-security</artifactId>
             <version>${project.version}</version>
         </dependency>
