--- a/app-id-api/pom.xml
+++ b/app-id-api/pom.xml
@@ -23,5 +23,13 @@
             <artifactId>de.huxhorn.sulky.ulid</artifactId>
             <version>8.3.0</version>
         </dependency>
+        
+        <!-- MyBatis TypeHandler support (optional) -->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatis.version}</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
