--- a/app-platform-codegen/pom.xml
+++ b/app-platform-codegen/pom.xml
@@ -18,7 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>com.bluecone</groupId>
-            <artifactId>app-id</artifactId>
+            <artifactId>app-id-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
