app-id 高隔离重构（对外只接口）+ longId 走 Segment 默认

--- a/app-application/src/main/resources/application-example.yml
+++ b/app-application/src/main/resources/application-example.yml
@@ -1,3 +1,10 @@
+# BlueCone Application - 配置示例模板
+# 
+# 说明：
+# 1. 此文件为配置结构示例，所有敏感信息已脱敏
+# 2. 本地开发请复制此文件为 application-local.yml（已加入 .gitignore）
+# 3. 生产环境请使用环境变量注入敏感配置
+
 server:
   port: 80
 
@@ -7,17 +14,10 @@ spring:
   flyway:
     # Flyway 迁移校验：开启后会在迁移前校验脚本完整性，确保可重复、可校验
     validate-on-migrate: true
-    # 历史库处理：如果数据库已有数据但未使用 Flyway，自动创建 baseline
-    baseline-on-migrate: true
-    # 允许乱序执行迁移（处理历史库中缺失的旧迁移脚本）
-    out-of-order: true
-    # 忽略缺失的迁移脚本（如果数据库中有但本地没有的迁移）
-    ignore-migration-patterns: "*:missing"
-    # 清理已删除的迁移记录（如果本地没有但数据库中有）
-    clean-disabled: false
 
   datasource:
-    url: ${DB_URL:jdbc:mysql://localhost:3306/app?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf8}
+    # 数据库连接：请通过环境变量 DB_URL 注入，或使用 application-local.yml
+    url: ${DB_URL:jdbc:mysql://localhost:3306/bluecone?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf8}
     username: ${DB_USERNAME:root}
     password: ${DB_PASSWORD:}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -30,17 +30,15 @@ spring:
 
   data:
     redis:
+      # Redis 连接：请通过环境变量注入
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_PORT:6379}
       database: ${REDIS_DATABASE:0}
       username: ${REDIS_USERNAME:}
       password: ${REDIS_PASSWORD:}
 
-
 mybatis-plus:
   enabled: true
-
-
 
 bluecone:
   cache:
@@ -77,6 +75,7 @@ bluecone:
   storage:
     provider: ALIYUN_OSS
     aliyun:
+      # OSS 配置：请通过环境变量注入访问密钥
       endpoint: ${OSS_ENDPOINT:https://oss-cn-hangzhou.aliyuncs.com}
       access-key-id: ${OSS_ACCESS_KEY_ID:}
       access-key-secret: ${OSS_ACCESS_KEY_SECRET:}
